# mldoc

_opam/.opam-switch/: environment  switch-config  switch-state
_opam/.opam-switch/backup/: state-20260306061641.export
_opam/.opam-switch/config/: ocaml.config
_opam/.opam-switch/install/: angstrom.changes  bigstringaf.changes  cmdliner.changes  cppo.changes  csexp.changes  dune-configurator.changes  dune.changes  gen.changes  js_of_ocaml-compiler.changes  js_of_ocaml-ppx.changes  js_of_ocaml.changes  menhir.changes  menhirCST.changes  menhirGLR.changes  menhirLib.changes  menhirSdk.changes  ocaml-base-compiler.changes  ocaml-compiler-libs.changes  ocaml-config.changes  ocaml-syntax-shims.changes  ocaml.changes  ocamlbuild.changes  ocamlfind.changes  ppx_derivers.changes  ppx_deriving.changes  ppx_deriving_yojson.changes  ppxlib.changes  sedlex.changes  seq.changes  sexplib0.changes  stdlib-shims.changes  stringext.changes  topkg.changes  uri.changes  xmlm.changes  yojson.changes
_opam/.opam-switch/sources/menhir.20260209/fix/: dune-project
_opam/.opam-switch/sources/menhir.20260209/fix/src/: GraphNumbering.mli
_opam/.opam-switch/sources/menhirCST.20260209/lib/: dune
_opam/.opam-switch/sources/menhirCST.20260209/src/: CodeBackend.ml  LRijkstraFast.mli  TableGeneration.ml  TableGeneration.mli  TestGLR.mli  back.mli  dune  grammar.ml  lr0.ml
_opam/.opam-switch/sources/menhirCST.20260209/src/StackLang/: LeaveStackLang.ml  StackLang.ml  StackLangBuilder.ml  StackLangTokenAnalysis.ml
_opam/.opam-switch/sources/menhirLib.20260209/base/: AStar.mli  CatSeq.ml  CompletedNatWitness.ml  GenericAnalysis.mli  GraphNumberingRec.mli  Located.ml  MInt.ml  MLazy.mli  MRef.mli  MString.mli  OrComment.ml  Patricia.ml  Range.mli  RowDisplacementEncodeClassic.mli  StringSet.mli  Time.mli  Unifier.ml  Unifier.mli  dune
_opam/.opam-switch/sources/menhirLib.20260209/front/: AvoidEOS.mli  CheckMergeFunctions.mli  Drop.mli  ExpandNullable.ml  FreeNames.mli  Infer.ml  InputFile.mli  Interface.mli  Lexmli.mll  NonEpsilon.mli  ParserAux.ml  ParserAux.mli  RawSentenceLexer.mll  SelectiveExpansion.mli  Sort.ml  SortUnification.mli  Syntax.ml  Trim.mli  dune
_opam/.opam-switch/sources/menhirLib.20260209/middle/: DefaultReductionIntroduction.mli  Derivation.mli  ExtraReductions.mli  InterpretGLR.mli  LR1Construction.ml  Messages.ml  ReductionSites.ml  ReferenceGraph.ml  ReferenceInterpreterGLR.ml  SLR.ml  SilentConflictResolution.ml  StackSymbols.ml  TerminalStream.ml  dune
_opam/.opam-switch/sources/menhirSdk.20260209/: dune
_opam/.opam-switch/sources/menhirSdk.20260209/GLR/: GLR.mli  GSS.ml  Input.mli  PriorityQueue.ml  TableFormat.ml  dune
_opam/.opam-switch/sources/menhirSdk.20260209/base/: Dot.ml  ILConstruction.ml  ILPrinter.mli  InfiniteArray.ml  InfiniteArray.mli  IntMap.ml  IntMap.mli  IntPQueue.ml  IntSet.ml  LatticeInequalities.ml  MCOP.mli  MQueue.mli  MRef.ml  RowDisplacementEncode.mli  StringMap.ml  StringMap.mli  Validate.ml  Vector.ml
_opam/.opam-switch/sources/menhirSdk.20260209/benchmarks/template/backends/: TEMPLATE
_opam/.opam-switch/sources/menhirSdk.20260209/coq-menhirlib/: CHANGES.md
_opam/.opam-switch/sources/menhirSdk.20260209/coq-menhirlib/src/: Interpreter_correct.v
_opam/.opam-switch/sources/menhirSdk.20260209/demos/: Makefile
_opam/.opam-switch/sources/menhirSdk.20260209/demos/calc-GLR/: calc2.exp  parser.mli.exp  parser.mly
_opam/.opam-switch/sources/menhirSdk.20260209/demos/calc-inspection/: parser.mli.exp
_opam/.opam-switch/sources/menhirSdk.20260209/demos/calc-unparsing/: parser.mli.exp
_opam/.opam-switch/sources/menhirSdk.20260209/demos/rocq-minicalc/: Parser.vy
_opam/.opam-switch/sources/menhirSdk.20260209/demos/rocq-syntax-errors/: Extraction.v  README.md
_opam/.opam-switch/sources/menhirSdk.20260209/doc/: .aspell.en.pws
_opam/.opam-switch/sources/menhirSdk.20260209/driver/stage1/: Driver.ml
_opam/.opam-switch/sources/menhirSdk.20260209/driver/stage2/: Makefile
_opam/.opam-switch/sources/menhirSdk.20260209/executable/stage1/: dune  main.ml
_opam/.opam-switch/sources/menhirSdk.20260209/executable/stage2/: dune
_opam/.opam-switch/sources/menhirSdk.20260209/fix/: .gitignore  CHANGES.md
_opam/.opam-switch/sources/menhirSdk.20260209/fix/src/: Glue.mli  Numbering.mli  Sigs.ml
_opam/.opam-switch/sources/menhirSdk.20260209/front/: Action.ml  AvoidEOS.ml  CheckSafeExpansion.mli  EliminateAnonymousRules.mli  FreeNames.ml  FrontAPI.ml  Infer.mli  Interface.ml  JoinGrammars.ml  NewRuleSyntax.ml  Nonempty.mli  NonterminalType.mli  Nullable.ml  PlainSyntaxAccessors.ml  PlainSyntaxAccessors.mli  PlainSyntaxAnalysis.mli  TokenType.ml  Trim.ml
_opam/.opam-switch/sources/menhirSdk.20260209/lib/pack/: dune
_opam/.opam-switch/sources/menhirSdk.20260209/middle/: ConflictExplanation.ml  ConflictExplanation.mli  Conventions.mli  Dump.ml  Dump.mli  GrammarConstruction.ml  InterpretGLR.ml  LR0Construction.ml  LR1Construction.mli  LR1Partial.ml  MiddleAPI.ml  Renumber.mli  SLR.mli  SilentConflictResolution.mli  StackShape.ml
_opam/.opam-switch/sources/menhirSdk.20260209/sdk/: cmly_read.mli
_opam/.opam-switch/sources/menhirSdk.20260209/src/: Channels.mli  GLRBackend.ml  GLRBackend.mli  RocqBackend.ml  RocqBackend.mli  freeze.ml  grammar.mli  invariant.ml  settings.mli
_opam/.opam-switch/sources/menhirSdk.20260209/src/StackLang/: StackLangTransform.ml
_opam/doc/menhir/: manual.html
_opam/doc/xmlm/: README.md
_opam/lib/: findlib.conf
_opam/lib/angstrom/: META  angstrom.cma  angstrom.cmi  angstrom.cmt  angstrom.cmti  angstrom.cmx  angstrom.cmxa  angstrom.cmxs  angstrom__.cmi  angstrom__.cmt  angstrom__.cmx  angstrom__Buffering.cmi  angstrom__Buffering.cmt  angstrom__Buffering.cmti  angstrom__Buffering.cmx  angstrom__Exported_state.cmi  angstrom__Exported_state.cmt  angstrom__Exported_state.cmx  angstrom__Input.cmi  angstrom__Input.cmt  angstrom__Input.cmti  angstrom__Input.cmx  angstrom__More.cmi  angstrom__More.cmt  angstrom__More.cmti  angstrom__More.cmx  angstrom__Parser.cmi  angstrom__Parser.cmt  angstrom__Parser.cmx  opam
(+2978 files in other folders)
